@@ -1,5 +1,7 @@
 2000-06-07  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
 
+	* tools/smistrip.in: patch to strip modules from I-Ds.
+
 	* lib/parser-smi.y: added checks for range restrictions applied
 	to enumeration types.
 
